ja-source/docusaurus-plugin-content-docs/version-2.1/sql-manual/sql-statements/cluster-management/instance-management/SHOW-BACKENDS.md
---
{
  "title": "SHOW BACKENDS",
  "language": "ja",
  "description": "この文はBEノードの基本ステータス情報を表示するために使用されます。"
}
---
## 説明

この文は BE ノードの基本的なステータス情報を表示するために使用されます。

## 構文

```sql
 SHOW BACKENDS
```
## 戻り値

| カラム                      | 備考                                                                                                                                                                                                                                                           |
|-------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| BackendId               | 現在のBEのID。                                                                                                                                                                                                                                                      |
| Host                    | 現在のBEのIPアドレスまたはホスト名。                                                                                                                                                                                                                 |
| HeartbeatPort           | 現在のBEのheartbeatサービスの通信ポート。                                                                                                                                                                                             |
| BePort                  | 現在のBEのthrift RPC通信ポート。                                                                                                                                                                                                           |
| HttpPort                | 現在のBEのHTTP通信ポート。                                                                                                                                                                                                                 |
| BrpcPort                | 現在のBEのbRPC通信ポート。                                                                                                                                                                                                                 |
| ArrowFlightSqlPort      | 現在のBEのArrowFlightプロトコルの通信ポート。                                                                                                                                                                          |
| LastStartTime           | 現在のBEが開始されたタイムスタンプ。                                                                                                                                                                                                                     |
| LastHeartbeat           | 現在のBEが送信した最後の成功したheartbeatのタイムスタンプ。                                                                                                                                                                                         |
| Alive                   | 現在のBEが生きているかどうか。                                                                                                                                                                                                                               |
| SystemDecommissioned    | この値がtrueの場合、現在のBEノードが安全な廃止処理中であることを意味します。                                                                                                                                                                          |
| TabletNum               | 現在のBEに保存されているタブレットの数。                                                                                                                                                                                                                |
| DataUsedCapacity        | 現在のBEのデータが占有するディスク容量。                                                                                                                                                                                                         |
| TrashUsedCapacity       | 現在のBEのトラッシュ内のデータが占有するディスク容量。                                                                                                                                                                            |
| AvailCapacity           | 現在のBEの利用可能なディスク容量。                                                                                                                                                                                                                    |
| TotalCapacity           | 現在のBEの総ディスク容量。TotalCapacity = AvailCapacity + TrashUsedCapacity + DataUsedCapacity + その他の非ユーザーデータファイルが占有するディスク容量。                                                                                                               |
| UsedPct                 | 現在のBEの総使用ディスク容量の割合。                                                                                                                                                                                                 |
| MaxDiskUsedPct          | 現在のBEの全ディスクのうち、使用ディスク容量の最大割合。                                                                                                                                                                               |
| RemoteUsedCapacity      | 現在のBEでホット・コールド階層化機能を使用した後、リモートストレージにアップロードされたデータが占有するディスク容量。                                                                                                                          |
| Tag                     | 現在のBEのタグ情報、JSON形式で表示。現在のBEリソースグループの名前が保存されています。                                                                                                                                           |
| ErrMsg                  | 現在のBEのheartbeatが失敗した際のエラーメッセージ。                                                                                                                                                                                  |
| Version                 | 現在のBEのバージョン情報。                                                                                                                                                                                                                     |
| Status                  | 現在のBEのステータス情報、JSON形式で表示。lastSuccessReportTabletsTime、lastStreamLoadTime、isQueryDisabled、isLoadDisabledなどが含まれます。異なるバージョンで保存される情報が若干異なる場合があることに注意してください。 |
| HeartbeatFailureCounter | 現在のBEの連続したheartbeat失敗回数。この数がFE Masterで設定された`max_backend_heartbeat_failure_tolerance_count`（デフォルト値は1）を超えると、`Alive`フィールドがfalseに設定されます。                         |
| NodeRole                | 現在のBEの役割。2つのタイプがあります：`mix`はデフォルトの役割で、`computation`は現在のノードが連合分析クエリのみに使用されることを意味します。                                                                                         |

## アクセス制御要件

このSQLを実行するユーザーは、最低限以下の権限を持つ必要があります：

| 権限  | オブジェクト | 備考 |
|------------|----|----|
| ADMIN_PRIV |    |    |

## 使用上の注意

クエリ結果をさらにフィルタリングする必要がある場合は、テーブル値関数[backends()](../../../sql-functions/table-valued-functions/backends.md)を使用できます。SHOW BACKENDSは以下のステートメントと同等です：

```sql
SELECT * FROM BACKENDS();
```
## 例

```sql
SHOW BACKENDS;
```
```text
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-----------------------------+------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+
| BackendId | Host      | HeartbeatPort | BePort | HttpPort | BrpcPort | ArrowFlightSqlPort | LastStartTime       | LastHeartbeat       | Alive | SystemDecommissioned | TabletNum | DataUsedCapacity | TrashUsedCapacity | AvailCapacity | TotalCapacity | UsedPct | MaxDiskUsedPct | RemoteUsedCapacity | Tag                      | ErrMsg | Version                     | Status                                                                                                                                   | HeartbeatFailureCounter | NodeRole |
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-----------------------------+------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+
| 10002     | 127.0.0.1 | 9050          | 9060   | 8040     | 8060     | 10040              | 2025-01-20 02:11:39 | 2025-01-21 11:52:40 | true  | false                | 281       | 9.690 MB         | 0.000             | 10.505 GB     | 71.750 GB     | 85.36 % | 85.36 %        | 0.000              | {"location" : "default"} |        | doris-2.1.7-rc03-443e87e203 | {"lastSuccessReportTabletsTime":"2025-01-21 11:51:59","lastStreamLoadTime":1737460114345,"isQueryDisabled":false,"isLoadDisabled":false} | 0                       | mix      |
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-----------------------------+------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+
```
