ja-source/docusaurus-plugin-content-docs/version-3.x/sql-manual/sql-statements/cluster-management/instance-management/SHOW-BACKENDS.md
---
{
  "title": "SHOW BACKENDS",
  "description": "この文は、BEノードの基本的なステータス情報を表示するために使用されます。",
  "language": "ja"
}
---
## 説明

このステートメントはBEノードの基本ステータス情報を表示するために使用されます。

## 構文

```sql
 SHOW BACKENDS
```
## 戻り値

| カラム                      | 注意事項                                                                                                                                                                                                                                                                                                                         |
|-------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| BackendId               | 現在のBEのIDです。                                                                                                                                                                                                                                                                                                                    |
| Host                    | 現在のBEのIPアドレスまたはホスト名です。                                                                                                                                                                                                                                                                                               |
| HeartbeatPort           | 現在のBEのハートビートサービスの通信ポートです。                                                                                                                                                                                                                                                                           |
| BePort                  | 現在のBEのthrift RPC通信ポートです。                                                                                                                                                                                                                                                                                         |
| HttpPort                | 現在のBEのHTTP通信ポートです。                                                                                                                                                                                                                                                                                               |
| BrpcPort                | 現在のBEのbRPC通信ポートです。                                                                                                                                                                                                                                                                                               |
| ArrowFlightSqlPort      | 現在のBEのArrowFlightプロトコルの通信ポートです。                                                                                                                                                                                                                                                                        |
| LastStartTime           | 現在のBEが開始されたタイムスタンプです。                                                                                                                                                                                                                                                                                   |
| LastHeartbeat           | 現在のBEが送信した最後の成功したハートビートのタイムスタンプです。                                                                                                                                                                                                                                                       |
| Alive                   | 現在のBEが生きているかどうかです。                                                                                                                                                                                                                                                                                             |
| SystemDecommissioned    | この値がtrueの場合、現在のBEノードが安全な廃棄プロセス中であることを意味します。                                                                                                                                                                                                                                        |
| TabletNum               | 現在のBEに保存されているタブレットの数です。                                                                                                                                                                                                                                                                              |
| DataUsedCapacity        | 現在のBEのデータが占有するディスク容量です。                                                                                                                                                                                                                                                                       |
| TrashUsedCapacity       | 現在のBEのトラッシュ内のデータが占有するディスク容量です。                                                                                                                                                                                                                                                          |
| AvailCapacity           | 現在のBEの利用可能なディスク容量です。                                                                                                                                                                                                                                                                                  |
| TotalCapacity           | 現在のBEの総ディスク容量です。TotalCapacity = AvailCapacity + TrashUsedCapacity + DataUsedCapacity + その他の非ユーザーデータファイルが占有するディスク容量。                                                                                                                                                             |
| UsedPct                 | 現在のBEの総使用ディスク容量の割合です。                                                                                                                                                                                                                                                                               |
| MaxDiskUsedPct          | 現在のBEの全ディスクの中で最も高い使用ディスク容量の割合です。                                                                                                                                                                                                                                                             |
| RemoteUsedCapacity      | 現在のBEでホット・コールドティアリング機能を使用した後にリモートストレージにアップロードされたデータが占有するディスク容量です。                                                                                                                                                                                        |
| Tag                     | 現在のBEのタグ情報で、JSON形式で表示されます。保存されるタグ情報は異なるデプロイメントモードで異なります。統合ストレージ・コンピューティングモードでは、現在のBEリソースグループの名前が保存されます。分離ストレージ・コンピューティングモードでは、いくつかの追加情報が保存されます。 |
| ErrMsg                  | 現在のBEのハートビートが失敗した際のエラーメッセージです。                                                                                                                                                                                                                                                                |
| Version                 | 現在のBEのバージョン情報です。                                                                                                                                                                                                                                                                                   |
| Status                  | 現在のBEのステータス情報の一部で、JSON形式で表示され、lastSuccessReportTabletsTime、lastStreamLoadTime、isQueryDisabled、isLoadDisabledなどが含まれます。異なるバージョンで保存される情報が若干異なる場合があることに注意してください。                                                               |
| HeartbeatFailureCounter | 現在のBEの連続したハートビート失敗回数です。この回数がFE Masterで設定された`max_backend_heartbeat_failure_tolerance_count`（デフォルト値は1）を超えると、`Alive`フィールドがfalseに設定されます。                                                                                                                                                                                                             |
| NodeRole                | 現在のBEの役割です。2つのタイプがあります：`mix`はデフォルトの役割で、`computation`は現在のノードが連携分析クエリにのみ使用されることを意味します。                                                                                                                                                                                                                                                                       |

## アクセス制御要件

このSQLを実行するユーザーは、少なくとも以下の権限を持つ必要があります：

| 権限  | オブジェクト | 注意事項 |
|------------|----|----|
| SELECT_PRIV | internal.information_schema | すべてのユーザーはデフォルトでこのデータベースへの権限を持っています |

## 使用上の注意

クエリ結果をさらにフィルタリングする必要がある場合は、Table値関数[backends()](../../../sql-functions/table-valued-functions/backends.md)を使用できます。SHOW BACKENDSは以下のステートメントと同等です：

```sql
SELECT * FROM BACKENDS();
```
## 例

```sql
SHOW BACKENDS;
```
```text
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-----------------------------+------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+
| BackendId | Host      | HeartbeatPort | BePort | HttpPort | BrpcPort | ArrowFlightSqlPort | LastStartTime       | LastHeartbeat       | Alive | SystemDecommissioned | TabletNum | DataUsedCapacity | TrashUsedCapacity | AvailCapacity | TotalCapacity | UsedPct | MaxDiskUsedPct | RemoteUsedCapacity | Tag                      | ErrMsg | Version                     | Status                                                                                                                                   | HeartbeatFailureCounter | NodeRole |
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-----------------------------+------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+
| 10002     | 127.0.0.1 | 9050          | 9060   | 8040     | 8060     | 10040              | 2025-01-20 02:11:39 | 2025-01-21 11:52:40 | true  | false                | 281       | 9.690 MB         | 0.000             | 10.505 GB     | 71.750 GB     | 85.36 % | 85.36 %        | 0.000              | {"location" : "default"} |        | doris-2.1.7-rc03-443e87e203 | {"lastSuccessReportTabletsTime":"2025-01-21 11:51:59","lastStreamLoadTime":1737460114345,"isQueryDisabled":false,"isLoadDisabled":false} | 0                       | mix      |
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-----------------------------+------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+
```
